2002-03-20  Jason Merrill  <jason@redhat.com>

	PR c++/2136
	* init.c (build_delete): Check access for a member op delete here.
	* decl2.c (delete_sanity): Not here.

2002-03-19  Jason Merrill  <jason@redhat.com>

	PR c++/5118
	* class.c (get_vfield_name): Use the constructor_name.

2002-03-18  Jason Merrill  <jason@redhat.com>

	PR c++/4222, c++/5995
	* call.c (build_over_call): Fix empty class logic.

	PR c++/3870
	* cp-tree.h (struct saved_scope): Add last_parms field.
	* decl.c (maybe_push_to_top_level): Save last_function_parms.
	(pop_from_top_level): Restore it.

	PR c++/4377
	* mangle.c (write_expression): Strip NOP_EXPRs sooner.  Also strip
	NON_LVALUE_EXPRs.

	PR c++/4003
	* pt.c (tsubst_friend_function): Use decl_namespace_context.

2002-03-17  Jason Merrill  <jason@redhat.com>

	PR c++/5757
	* init.c (build_new_1): Pass the right pointer to op delete.

2002-02-20  Release Manager

	* GCC 3.0.4 Released.

2002-02-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* decl.c (start_method): Fix error in 2002-01-10 change.

2002-02-13  Richard Smith <richard@ex-parrot.com>

	* decl.c (maybe_build_cleanup): Do not destroy thunk parameters.

2002-01-31  Jason Merrill  <jason@redhat.com>

	PR c++/3395
	* semantics.c (finish_class_definition): Clear out TREE_TYPE for 
	all variants.

2002-01-23  Jason Merrill  <jason@redhat.com>

	PR c++/3331
	* init.c (resolve_offset_ref): Use build_indirect_ref.

2002-01-10  Ira Ruben	<ira@apple.com>

	PR c++/907
	* decl.c (start_method): Handle attrlist.

2002-01-07  Jason Merrill  <jason@redhat.com>

	PR c++/3536
	* method.c (make_thunk): If !flag_weak, give the thunk the
	function's linkage.
	(use_thunk): Here, too.

2001-12-21  Jason Merrill  <jason@redhat.com>

	PR c++/4122
	* class.c (update_vtable_entry_for_fn): Set delta to zero for a
	lost primary.

2001-12-18  Jason Merrill  <jason@redhat.com>

	PR c++/3242
	* class.c (add_method): Do compare 'this' quals when trying to match a